--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">SubliMate</string>
     <string name="action_settings">Settings</string>
+
+    <!-- Errors -->
+    <string name="error_message">Oops, something went wrong!</string>
 </resources>
