--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <!-- Manual Add Dialog -->
     <string name="add_dialog_title">Manual Inventory Update</string>
-    <string name="add_dialog_item_name">Item Name: </string>
+    <string name="add_dialog_item_name">Name: </string>
+    <string name="add_dialog_item_quantity">Quantity: </string>
     <string name="add_dialog_add_item">Add</string>
 </resources>
