--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">SubliMate</string>
-    <string name="action_settings">Settings</string>
+    <string name="settings_refresh">Refresh</string>
+    <string name="settings_name">Settings</string>
 
     <!-- Errors -->
     <string name="error_message">Oops, something went wrong!</string>
@@ -14,4 +15,10 @@
     <!-- Tiebreaker Dialog -->
     <string name="tiebreaker_dialog_title">Tiebreaker</string>
     <string name="tiebreaker_dialog_confirm">OK</string>
+
+    <!-- Preferences -->
+    <string name="preferences_network_title">Network</string>
+    <string name="preferences_websocket_ip">WebSocket IP:</string>
+    <string name="preferences_websocket_summary">ws://ip:port</string>
+    <string name="preferences_websocket_dialog_message">Enter the WebSocket IP</string>
 </resources>
