--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SubliMate</string>
     <string name="settings_refresh">Refresh</string>
     <string name="settings_name">Settings</string>
+    <string name="menu_rearrange">Rearrange</string>
 
     <!-- Titles -->
     <string name="title_frequent">Frequent</string>
