--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="settings_refresh">Refresh</string>
     <string name="settings_name">Settings</string>
     <string name="menu_rearrange">Rearrange</string>
+    <string name="menu_done_rearrange">Done Rearrange</string>
 
     <!-- Titles -->
     <string name="title_frequent">Frequent</string>
