Add sounds, wait dialog when manually adding, and reset inventory

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">SubliMate</string>
     <string name="settings_refresh">Refresh</string>
-    <string name="settings_name">Settings</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_rearrange">Rearrange</string>
     <string name="menu_done_rearrange">Done Rearrange</string>
+    <string name="menu_reset">Reset</string>
 
     <!-- Titles -->
-    <string name="title_frequent">Frequent</string>
+    <string name="title_frequent">Recent</string>
     <string name="title_all_items">All Items</string>
 
     <!-- Errors -->
